--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <h4>head 4</h4>
 <h5>head 5</h5>
 <h6>head 6</h6>
+<img
+  src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fthumb%2Fe%2Fe0%2FGit-logo.svg%2F512px-Git-logo.svg.png&tbnid=ANInw8d8cMSRqM&vet=12ahUKEwih2OCM276CAxW8FhAIHYkBADkQMygAegQIARBu..i&imgrefurl=https%3A%2F%2Fen.m.wikipedia.org%2Fwiki%2FFile%3AGit-logo.svg&docid=gMuski3WinyK8M&w=512&h=214&q=git&ved=2ahUKEwih2OCM276CAxW8FhAIHYkBADkQMygAegQIARBu"
+  alt=""
+/>
 <p>
   Я, как технический директор, регулярно сталкиваюсь с необходимостью обсудить с
   командой архитектуру нового приложения или микросервиса. <br />
